[workspace]
resolver = "2"
members = [
    "crawler"
]

[workspace.dependencies]
reqwest = { version = "0.12.19", features = ["blocking"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
once_cell = "1.21.3"
dashmap = "6.1.0"
anyhow = "1.0.80"
tracing = "0.1.41"
scraper = "0.23.1"
url = "2.5.4"

[package]
name = "ferris-the-crawler"
version = "0.1.0"
edition = "2024"

[features]
flamegraph = ["pprof"]

[dependencies]
crawler = { path = "crawler" }
tracing-subscriber = "0.3.19"
reqwest.workspace = true
tracing.workspace = true
anyhow.workspace = true
tokio.workspace = true
dashmap.workspace = true

pprof = { version = "0.7", optional = true, features = ["flamegraph"] }

