[package]
name = "ferris-the-crawler"
version = "0.1.0"
edition = "2024"

[features]
flamegraph = ["pprof"]

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
reqwest = { version = "0.12.19", features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3.19"
csv = "1.3"
once_cell = "1.21.3"
dashmap = "6.1.0"
anyhow = "1.0.80"
tracing = "0.1.41"
scraper = "0.23.1"
url = "2.5.4"

pprof = { version = "0.7", optional = true, features = ["flamegraph"] }
futures = "0.3.31"
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }

